--- a/src/Eccube/Resource/template/admin/Product/csv_product.twig
+++ b/src/Eccube/Resource/template/admin/Product/csv_product.twig
@@ -68,25 +68,25 @@ $(function() {
     <div class="col-md-12">
         <form id="upload-form" class="form-inline" method="post" action="{{ url('admin_product_csv_import') }}" {{ form_enctype(form) }}>
             {{ form_widget(form._token) }}
-            <div id="product_csv_upload__box" class="box">
-                <div id="product_csv_header" class="box-header">
+            <div id="product_csv_upload_box" class="box">
+                <div id="product_csv_upload_box__header" class="box-header">
                     <h3 class="box-title">商品登録CSV</h3>
                 </div><!-- /.box-header -->
-                <div id="product_csv_body" class="box-body">
-                    <div class="form-group">
-                        <label id="product_csv_body__label" class="col-sm-5 control-label">CSVファイル選択</label>
-                        <div id="product_csv_body__file" class="col-sm-7">
+                <div id="product_csv_upload_box__body" class="box-body">
+                    <div id="product_csv_body__import_file" class="form-group">
+                        <label class="col-sm-5 control-label">CSVファイル選択</label>
+                        <div class="col-sm-7">
                             {{ form_widget(form.import_file, {'attr': {'accept': 'text/csv,text/tsv'}}) }}
                             {{ form_errors(form.import_file) }}
                         </div>
                         {% for error in errors %}
-                            <div id="product_csv_body__error" class="text-danger">{{ error.message }}</div>
+                            <div id="product_csv_upload_box__error--{{ loop.index }}" class="text-danger">{{ error.message }}</div>
                         {% endfor %}
                     </div>
                     <div id="spinner"></div>
                 </div><!-- /.box-body -->
-                <div id="product_csv_upload__button_area" class="box-footer text-center">
-                    <button id="upload-button" type="submit" class="btn btn-primary btn-sm">CSVファイルのアップロード</button>
+                <div id="product_csv_upload_box__button_area" class="box-footer text-center">
+                    <button id="upload__button" type="submit" class="btn btn-primary btn-sm">CSVファイルのアップロード</button>
                 </div><!-- /.box-footer -->
             </div><!-- /.box -->
         </form>
@@ -95,47 +95,47 @@ $(function() {
 
 <div id="product_csv_file_format" class="row">
     <div class="col-md-12">
-        <div class="box">
-            <div id="product_csv_file_format__head" class="box-header">
-                <a href="{{ url('admin_product_csv_template', {'type': 'product'}) }}" id="download-button" class="btn btn-default pull-right btn-xs">雛形ファイルダウンロード</a>
+        <div id="product_csv_file_format_box" class="box">
+            <div id="product_csv_file_format_box__header" class="box-header">
+                <a id="link__product_csv_template" href="{{ url('admin_product_csv_template', {'type': 'product'}) }}" id="download-button" class="btn btn-default pull-right btn-xs">雛形ファイルダウンロード</a>
                 <h3 class="box-title">商品登録CSVファイルフォーマット</h3>
             </div><!-- /.box-header -->
-            <div id="product_csv_file_format__body" class="box-body no-padding">
-                <div class="table_list">
+            <div id="product_csv_file_format_box__body" class="box-body no-padding">
+                <div id="product_csv_file_format_list" class="table_list">
                     <div class="table-responsive no-border table-menu table-responsive-overflow">
                         <table class="table table-striped">
                             <thead>
-                                <tr id="file_format__head" class="text-nowrap">
+                                <tr id="product_csv_file_format_list__header" class="text-nowrap">
                                     {% for header in headers|keys %}
-                                        <th>{{ header }}</th>
+                                        <th id="product_csv_file_format_list__header--{{ loop.index }}">{{ header }}</th>
                                     {% endfor %}
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr id="file_format__body" class="text-nowrap">
-                                    <td>新規登録時は未設定<br>既存商品の更新は商品IDを設定</td>
-                                    <td>必須</td>
-                                    <td>必須</td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td>設定されていない場合<br>0を登録</td>
-                                    <td>複数画像の場合<br>画像ファイル名をカンマ区切りで<br>「"」で囲んで設定</td>
-                                    <td>複数カテゴリの場合<br>商品カテゴリIDをカンマ区切りで<br>「"」で囲んで設定</td>
-                                    <td>必須</td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td></td>
-                                    <td>在庫数無制限フラグが0の場合<br>0以上の数値を設定</td>
-                                    <td>必須</td>
-                                    <td>0以上の数値を設定</td>
-                                    <td>0以上の数値を設定</td>
-                                    <td>必須<br>0以上の数値を設定</td>
-                                    <td>商品ごとの送料設定が有効の場合<br>0以上の数値を設定</td>
-                                    <td>設定されていない場合<br>0を登録</td>
+                                <tr id="product_csv_file_format_list__body" class="text-nowrap">
+                                    <td id="product_csv_file_format_list__id">新規登録時は未設定<br>既存商品の更新は商品IDを設定</td>
+                                    <td id="product_csv_file_format_list__status">必須</td>
+                                    <td id="product_csv_file_format_list__name">必須</td>
+                                    <td id="product_csv_file_format_list__shop_memo"></td>
+                                    <td id="product_csv_file_format_list__info"></td>
+                                    <td id="product_csv_file_format_list__detail"></td>
+                                    <td id="product_csv_file_format_list__search_word"></td>
+                                    <td id="product_csv_file_format_list__free"></td>
+                                    <td id="product_csv_file_format_list__delete_flg">設定されていない場合<br>0を登録</td>
+                                    <td id="product_csv_file_format_list__image">複数画像の場合<br>画像ファイル名をカンマ区切りで<br>「"」で囲んで設定</td>
+                                    <td id="product_csv_file_format_list__category">複数カテゴリの場合<br>商品カテゴリIDをカンマ区切りで<br>「"」で囲んで設定</td>
+                                    <td id="product_csv_file_format_list__type_id">必須</td>
+                                    <td id="product_csv_file_format_list__class_1"></td>
+                                    <td id="product_csv_file_format_list__class_2"></td>
+                                    <td id="product_csv_file_format_list__date"></td>
+                                    <td id="product_csv_file_format_list__code"></td>
+                                    <td id="product_csv_file_format_list__stock">在庫数無制限フラグが0の場合<br>0以上の数値を設定</td>
+                                    <td id="product_csv_file_format_list__stock_nolimit_flg">必須</td>
+                                    <td id="product_csv_file_format_list__limit">0以上の数値を設定</td>
+                                    <td id="product_csv_file_format_list__price_2">0以上の数値を設定</td>
+                                    <td id="product_csv_file_format_list__price_1">必須<br>0以上の数値を設定</td>
+                                    <td id="product_csv_file_format_list__delivery_fee">商品ごとの送料設定が有効の場合<br>0以上の数値を設定</td>
+                                    <td id="product_csv_file_format_list__category_delete_flg">設定されていない場合<br>0を登録</td>
                                 </tr>
                             </tbody>
                         </table>
