--- a/src/Eccube/Resource/template/admin/Product/class_category.twig
+++ b/src/Eccube/Resource/template/admin/Product/class_category.twig
@@ -80,16 +80,16 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 {% block main %}
     <div id="class_category" class="row">
         <div class="col-md-12">
-            <div class="box">
+            <div id="class_category_box" class="box">
                 <div class="box-header">
                     <h3 class="box-title">規格名： {{ ClassName.name }}</h3>
                 </div>
-                <div class="box-body">
-                    <div class="form-inline">
+                <div id="class_category_box__body" class="box-body">
+                    <div id="class_category_box__class_new" class="form-inline">
                         <form role="form" class="form-horizontal" name="form1" id="form1" method="post" action="{% if TargetClassCategory.id %}{{ url('admin_product_class_category_edit', {class_name_id: ClassName.id, id: TargetClassCategory.id}) }}{% else %}{{ url('admin_product_class_category', {'class_name_id': ClassName.id}) }}{% endif %}">
                             {{ form_widget(form._token) }}
                             {{ form_widget(form.name, {attr: {placeholder: '分類名を入力'}}) }}
-                            <button class="btn btn-default btn-sm" type="submit">分類作成</button>
+                            <button id="button__class_new" class="btn btn-default btn-sm" type="submit">分類作成</button>
                         </form>
                     </div>
                 </div><!-- /.box-header -->
@@ -100,28 +100,30 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
                                 {% for ClassCategory in ClassCategories %}
 
-                                    <div id="class_category_list__body__{{ ClassCategory.id }}" class="item_box tr" data-category-id="{{ ClassCategory.id }}" data-rank="{{ ClassCategory.rank }}">
+                                    <div id="class_category_list__menu--{{ ClassCategory.id }}"
+                                         class="item_box tr"
+                                         data-category-id="{{ ClassCategory.id }}" data-rank="{{ ClassCategory.rank }}">
                                         <div class="icon_sortable td">
                                             <svg class="cb cb-ellipsis-v"> <use xlink:href="#cb-ellipsis-v" /></svg>
                                         </div>
-                                        <div id="class_category_list__title__{{ Category.id }}" class="item_pattern td">
-                                            <a href="{{ url('admin_product_class_category_edit', {class_name_id: ClassName.id, id: ClassCategory.id}) }}">
+                                        <div id="class_category_list__name--{{ Category.id }}" class="item_pattern td">
+                                            <a id="link__product_class_category_edit" href="{{ url('admin_product_class_category_edit', {class_name_id: ClassName.id, id: ClassCategory.id}) }}">
                                                 {{ ClassCategory.name }}
                                             </a>
                                         </div>
-                                        <div id="class_category_list__edit__{{ Category.id }}" class="icon_edit td">
+                                        <div id="class_category_list__edit_menu--{{ Category.id }}" class="icon_edit td">
                                             <div class="dropdown">
                                                 <a class="dropdown-toggle" data-toggle="dropdown"><svg class="cb cb-ellipsis-h"> <use xlink:href="#cb-ellipsis-h" /></svg></a>
                                                 <ul class="dropdown-menu dropdown-menu-right">
                                                     {% if ClassCategory.id != TargetClassCategory.id %}
-                                                        <li>
-                                                            <a href="{{ url('admin_product_class_category_edit', {class_name_id: ClassName.id, id: ClassCategory.id}) }}">編集</a>
+                                                        <li id="class_category_list__link_product_class_category_edit--{{ ClassCategory.id }}_enable">
+                                                            <a id="link__product_class_category_edit--{{ ClassCategory.id }}_enable" href="{{ url('admin_product_class_category_edit', {class_name_id: ClassName.id, id: ClassCategory.id}) }}">編集</a>
                                                         </li>
                                                     {% else %}
-                                                        <li><a>編集中</a></li>
+                                                        <li id="class_category_list__link_product_class_category_edit--{{ ClassCategory.id }}_disable"><a id="link__product_class_category_edit--{{ ClassCategory.id }}_disable">編集中</a></li>
                                                     {% endif %}
-                                                    <li>
-                                                        <a href="{{ url('admin_product_class_category_delete', {class_name_id: ClassName.id, id: ClassCategory.id }) }}" {{ csrf_token_for_anchor() }} data-method="delete"
+                                                    <li id="class_category_list__link_product_class_category_delete--{{ ClassCategory.id }}">
+                                                        <a id="link__product_class_category_delete--{{ ClassCategory.id }}" href="{{ url('admin_product_class_category_delete', {class_name_id: ClassName.id, id: ClassCategory.id }) }}" {{ csrf_token_for_anchor() }} data-method="delete"
                                                            data-message="分類名を削除すると、その分類を利用している商品規格が無効になります。整合性の問題を把握し、バックアップを行ってから削除することを推奨致します。">削除</a>
                                                     </li>
                                                 </ul>
@@ -134,7 +136,7 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
                         </div>
                     </div><!-- /.box-body -->
                 {% else %}
-                    <div id="class_category_list" class="box-body no-padding">
+                    <div id="class_category_list__error" class="box-body no-padding">
                         <div class="data-empty"><svg class="cb cb-inbox"> <use xlink:href="#cb-inbox" /></svg><p>データはありません</p></div>
                     </div><!-- /.box-body -->
                 {% endif %}
@@ -142,9 +144,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
             </div><!-- /.box -->
         </div><!-- /.col -->
     </div>
-    <div id="class_category_back" class="row">
+    <div id="class_category_list__link_product_class_name" class="row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 text-center btn_area">
-            <p><a href="{{ url('admin_product_class_name') }}">規格一覧に戻る</a></p>
+            <p><a id="link__product_class_name" href="{{ url('admin_product_class_name') }}">規格一覧に戻る</a></p>
         </div>
     </div>
 
